--- a/AUTHORS
+++ b/AUTHORS
@@ -465,6 +465,7 @@ Dongwan Kim
 Don Kelly
 Donna Whisnant
 Donn Miller
+Đorđe Mančić
 Doug Kingston
 Douglas Ridgway
 Doug Lyons
@@ -753,6 +754,7 @@ Jaka Kranjc
 Jake Hamby
 Jakob Eriksson
 Jakub Bartmiński
+Jakub Petrzilka
 Jakub Staroń
 James Abbatiello
 James Beddek
@@ -1014,6 +1016,7 @@ Kevin Puetz
 Kevin Schmidt
 Kieran Clancy
 Kieran Duggan
+Kieran Geary
 Kim Geonwoo (김건우)
 Kim Jung Eon
 Kim Lilliestierna
@@ -1167,6 +1170,7 @@ Martin Fuchs
 Martin Garton
 Martin Jesper Low Madsen
 Martin Liska
+Martino Fontana
 Martin Payne
 Martin Petricek
 Martin Pilka
@@ -1665,6 +1669,7 @@ Sin-ta Hsiea
 Slava Monich
 Slaven Rezic
 Snorri Sturluson
+Spencer Wallace
 Srivatsa Kanchi, R
 Stanislav Motylkov
 Stas Cymbalov
