--- a/AUTHORS
+++ b/AUTHORS
@@ -102,6 +102,7 @@ Anastasios Simeonidis
 Anatoly Lyutin
 Anders Bergh
 Anders Jonsson
+Anders Kjersem
 Anderson Lizardo
 Andoni Morales Alastruey
 András Kovács
@@ -1589,6 +1590,7 @@ Ross Biro
 Royal Chan
 Royce Mitchell III
 Roy Shea
+Rozhuk Ivan
 Rudolf Kastl
 Rudolf Mayerhofer
 Ruei-Yuan Lu
@@ -1719,6 +1721,7 @@ Sveinar Søpler
 Sven Baars
 Sven Hesse
 Sven Paschukat
+Sven Püschel
 Sven Verdoolaege
 Sylvain Bouchard
 Sylvain Petreolle
@@ -1784,6 +1787,7 @@ Tomasz Nowiński
 Tom Bech
 Tom Brus
 Tom Fogal
+Tom Helander
 Tom Hughes
 Tommy Schultz Lassen
 Tom Wickline
