urlmon: Make security zone names and descriptions translatable.
GetZoneAttributes ignores the names and descriptions in the registry for
the first five zones.

Wine-Bug: https://bugs.winehq.org/show_bug.cgi?id=27245

--- a/po/ar.po
+++ b/po/ar.po
@@ -168,8 +168,8 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "لم نتمكّن من إيجاد حزمة آلة جيكو واللّازمة لعمل التطبيقاتالحاوية على ترميزات "
 "الويب بشكلٍ سليم . بإمكاننا تحميل الحزمةتلقائيًا ثمّ تثبيتها من أجلك .\n"
@@ -10697,7 +10697,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "سطح المكتب"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "الحاسوب"
 
@@ -13506,6 +13507,55 @@ msgstr "تثبيت (%d)"
 msgid "Install"
 msgstr "تثبيت"
 
+#: dlls/urlmon/urlmon.rc:58
+#, fuzzy
+#| msgid "Local Port"
+msgid "Local intranet"
+msgstr "المنفذ المحلي"
+
+#: dlls/urlmon/urlmon.rc:60
+#, fuzzy
+#| msgid "Trusted Publishers"
+msgid "Trusted sites"
+msgstr "الناشرون الموثوقون"
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Ethernet"
+msgid "Internet"
+msgstr "شبكة محلية"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "الحاسوب"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
+
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
 msgctxt "window"
@@ -14015,8 +14065,8 @@ msgid ""
 "A MIDI map was not found. There may be a problem with the driver, or the "
 "MIDIMAP.CFG file may be corrupt or missing."
 msgstr ""
-"خريطة المقطوعات غير موجودة ، ربما توجد مشكلة بالتعريف ، أو بالملف MIDIMAP."
-"CFG حيث أنه قد يكون مفقودًا أو تالفًا."
+"خريطة المقطوعات غير موجودة ، ربما توجد مشكلة بالتعريف ، أو بالملف "
+"MIDIMAP.CFG حيث أنه قد يكون مفقودًا أو تالفًا."
 
 #: dlls/winmm/winmm.rc:55
 msgid ""
