--- a/po/da.po
+++ b/po/da.po
@@ -170,8 +170,8 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "Wine kunne ikke finde Gecko Pakken, som er nødvendig for at få "
 "applikationers indlejring af HTML til at fungere korrekt. Wine kan "
@@ -10772,7 +10772,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "Skrivebord"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "Min computer"
 
@@ -13595,6 +13596,55 @@ msgstr "&Installer"
 #| msgid "&Install"
 msgid "Install"
 msgstr "&Installer"
+
+#: dlls/urlmon/urlmon.rc:58
+#, fuzzy
+#| msgid "Local Port"
+msgid "Local intranet"
+msgstr "Lokal port"
+
+#: dlls/urlmon/urlmon.rc:60
+#, fuzzy
+#| msgid "Trusted Publishers"
+msgid "Trusted sites"
+msgstr "Troværdige udgivere"
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Ethernet"
+msgid "Internet"
+msgstr "Ethernet"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "Min computer"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
 
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
@@ -20213,9 +20263,9 @@ msgid ""
 msgstr ""
 "Hvis dette problem ikke er til stede under Windows, og det endnu ikke er "
 "blevet rapporteret, så kan du gemme den detaljerede information til en fil "
-"ved brug af \"Gem som\" knappen. Derefter <a href=\"https://gitlab.winehq."
-"org/wine/wine/-/wikis/Bugs\">indsend en fejlrapport</a> og vedhæft filen til "
-"rapporten."
+"ved brug af \"Gem som\" knappen. Derefter <a href=\"https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Bugs\">indsend en fejlrapport</a> og "
+"vedhæft filen til rapporten."
 
 #: programs/winedbg/winedbg.rc:40
 msgid ""
