--- a/po/he.po
+++ b/po/he.po
@@ -177,14 +177,14 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "אין באפשרות Wine למצוא את החבילה של Gecko הדרושה לצורך פעולה תקינה של "
 "יישומים המפענחים HTML.באפשרות Wine להוריד ולהתקין אותה אוטומטית עבורך.\n"
 "\n"
-"לתשומת לבך: מומלץ להשתמש בחבילות ההפצה במקום. ניתן לעיין בכתובת https://wiki."
-"winehq.org/Gecko לפרטים נוספים."
+"לתשומת לבך: מומלץ להשתמש בחבילות ההפצה במקום. ניתן לעיין בכתובת https://"
+"wiki.winehq.org/Gecko לפרטים נוספים."
 
 #: dlls/appwiz.cpl/appwiz.rc:110 dlls/appwiz.cpl/appwiz.rc:125
 msgid "&Install"
@@ -253,8 +253,8 @@ msgstr ""
 "אין באפשרות Wine למצוא את החבילה של Gecko הדרושה לצורך פעולה תקינה של "
 "יישומים המפענחים HTML.באפשרות Wine להוריד ולהתקין אותה אוטומטית עבורך.\n"
 "\n"
-"לתשומת לבך: מומלץ להשתמש בחבילות ההפצה במקום. ניתן לעיין בכתובת https://wiki."
-"winehq.org/Gecko לפרטים נוספים."
+"לתשומת לבך: מומלץ להשתמש בחבילות ההפצה במקום. ניתן לעיין בכתובת https://"
+"wiki.winehq.org/Gecko לפרטים נוספים."
 
 #: dlls/appwiz.cpl/appwiz.rc:31
 msgid "Add/Remove Programs"
@@ -10704,7 +10704,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "שולחן העבודה"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "המחשב שלי"
 
@@ -13534,6 +13535,55 @@ msgstr "ה&תקנה"
 #| msgid "&Install"
 msgid "Install"
 msgstr "ה&תקנה"
+
+#: dlls/urlmon/urlmon.rc:58
+#, fuzzy
+#| msgid "Local Port"
+msgid "Local intranet"
+msgstr "פתחה מקומית"
+
+#: dlls/urlmon/urlmon.rc:60
+#, fuzzy
+#| msgid "Trusted Publishers"
+msgid "Trusted sites"
+msgstr "מפיצים מהימנים"
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Ethernet"
+msgid "Internet"
+msgstr "Ethernet"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "המחשב שלי"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
 
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
