--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -165,8 +165,8 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "Wine fant ikke Gecko-pakken, som er nødvendig for at programmer som bruker "
 "HTML skal fungere ordentlig. Wine kan laste ned og installere denne "
@@ -3643,8 +3643,8 @@ msgid ""
 "preferences and login information."
 msgstr ""
 "Informasjonskapsler\n"
-"Filer som er lagret på datamaskinen av nettsider og brukes til å lagre f."
-"eks. brukervalg og påloggingsinformasjon."
+"Filer som er lagret på datamaskinen av nettsider og brukes til å lagre "
+"f.eks. brukervalg og påloggingsinformasjon."
 
 #: dlls/inetcpl.cpl/inetcpl.rc:75
 msgid ""
@@ -3679,8 +3679,8 @@ msgid ""
 "Certificates are used for your personal identification and to identify "
 "certificate authorities and publishers."
 msgstr ""
-"Sertifikater brukes for å identifisere deg, sertifikatautoriteter og -"
-"utstedere."
+"Sertifikater brukes for å identifisere deg, sertifikatautoriteter og "
+"-utstedere."
 
 #: dlls/inetcpl.cpl/inetcpl.rc:114
 msgid "Certificates..."
@@ -10442,7 +10442,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "Skrivebord"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "Min datamaskin"
 
@@ -13251,6 +13252,55 @@ msgstr "Installer (%d)"
 #: dlls/urlmon/urlmon.rc:53
 msgid "Install"
 msgstr "Installer"
+
+#: dlls/urlmon/urlmon.rc:58
+#, fuzzy
+#| msgid "Local Port"
+msgid "Local intranet"
+msgstr "Lokal port"
+
+#: dlls/urlmon/urlmon.rc:60
+#, fuzzy
+#| msgid "Trusted Publishers"
+msgid "Trusted sites"
+msgstr "Betrodde utgivere"
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Ethernet"
+msgid "Internet"
+msgstr "Ethernet"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "Min datamaskin"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
 
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
