--- a/po/sk.po
+++ b/po/sk.po
@@ -177,16 +177,16 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "Wine nemohol nájsť balíček Gecko ktorý je potrebný pre aplikácie, obsahujúce "
 "HTML, aby fungovali správne. Wine ho môže automaticky stiahnuť a "
 "nainštalovať pre Vás.\n"
 "\n"
 "Poznámka: odporúča sa použiť balíček Vašej distribúcie. Pozrite <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> pre bližšie informácie."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> pre bližšie informácie."
 
 #: dlls/appwiz.cpl/appwiz.rc:110 dlls/appwiz.cpl/appwiz.rc:125
 msgid "&Install"
@@ -265,8 +265,8 @@ msgstr ""
 "nainštalovať pre Vás.\n"
 "\n"
 "Poznámka: odporúča sa použiť balíček Vašej distribúcie. Pozrite <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> pre bližšie informácie."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> pre bližšie informácie."
 
 #: dlls/appwiz.cpl/appwiz.rc:31
 msgid "Add/Remove Programs"
@@ -10506,7 +10506,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "Pracovná plocha"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "Tento počítač"
 
@@ -13303,6 +13304,51 @@ msgstr "&Inštalovať"
 #| msgid "&Install"
 msgid "Install"
 msgstr "&Inštalovať"
+
+#: dlls/urlmon/urlmon.rc:58
+msgid "Local intranet"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:60
+msgid "Trusted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Interface"
+msgid "Internet"
+msgstr "Rozhranie"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "Tento počítač"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
 
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
