--- a/po/uk.po
+++ b/po/uk.po
@@ -163,8 +163,8 @@ msgid ""
 "install it for you.\n"
 "\n"
 "Note: it is recommended to use your distribution's packages instead. See <a "
-"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://gitlab."
-"winehq.org/wine/wine/-/wikis/Gecko</a> for details."
+"href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Gecko\">https://"
+"gitlab.winehq.org/wine/wine/-/wikis/Gecko</a> for details."
 msgstr ""
 "Wine не може знайти пакунок Gecko, який потрібний для коректної роботи "
 "додатків з підтримкою HTML. Wine може автоматично завантажити та встановити "
@@ -235,8 +235,9 @@ msgid ""
 "href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Wine-Mono\">https://"
 "gitlab.winehq.org/wine/wine/-/wikis/Wine-Mono</a> for details."
 msgstr ""
-"Wine не може знайти пакунок wine-mono, який потрібний для коректної роботи ."
-"NET додатків. Wine може автоматично завантажити та встановити його для Вас.\n"
+"Wine не може знайти пакунок wine-mono, який потрібний для коректної "
+"роботи .NET додатків. Wine може автоматично завантажити та встановити його "
+"для Вас.\n"
 "\n"
 "Зауважте: Рекомендується використати пакет з вашого дистрибутиву. Детальніше "
 "читайте <a href=\"https://gitlab.winehq.org/wine/wine/-/wikis/Wine-"
@@ -10390,7 +10391,8 @@ msgctxt "display name"
 msgid "Desktop"
 msgstr "Стільниця"
 
-#: dlls/shell32/shell32.rc:152 programs/regedit/regedit.rc:243
+#: dlls/shell32/shell32.rc:152 dlls/urlmon/urlmon.rc:56
+#: programs/regedit/regedit.rc:243
 msgid "My Computer"
 msgstr "Мій Комп'ютер"
 
@@ -12779,6 +12781,55 @@ msgstr "Встановити (%d)"
 #: dlls/urlmon/urlmon.rc:53
 msgid "Install"
 msgstr "Встановити"
+
+#: dlls/urlmon/urlmon.rc:58
+#, fuzzy
+#| msgid "Local Port"
+msgid "Local intranet"
+msgstr "Локальний порт"
+
+#: dlls/urlmon/urlmon.rc:60
+#, fuzzy
+#| msgid "Trusted Publishers"
+msgid "Trusted sites"
+msgstr "Довірені видавці"
+
+#: dlls/urlmon/urlmon.rc:62
+#, fuzzy
+#| msgid "Ethernet"
+msgid "Internet"
+msgstr "Ethernet"
+
+#: dlls/urlmon/urlmon.rc:64
+msgid "Restricted sites"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:57
+#, fuzzy
+#| msgid "My Computer"
+msgid "Your computer"
+msgstr "Мій Комп'ютер"
+
+#: dlls/urlmon/urlmon.rc:59
+msgid ""
+"This zone contains all Web sites that are on your organization's intranet."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:61
+msgid ""
+"This zone contains Web sites that you trust not to damage your computer or "
+"data."
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:63
+msgid "This zone contains all Web sites you haven't placed in other zones"
+msgstr ""
+
+#: dlls/urlmon/urlmon.rc:65
+msgid ""
+"This zone contains Web sites that could potentially damage your computer or "
+"data."
+msgstr ""
 
 #: dlls/user32/user32.rc:30 dlls/user32/user32.rc:43
 #: programs/taskmgr/taskmgr.rc:138
